In .hgrc added hgview extension

--- a/.hgrc
+++ b/.hgrc
@@ -1,10 +1,8 @@
 # vim: set filetype=cfg
 [ui]
-username = Александр Ульяницкий <a.ulyanitsky@gmail.com>
+username = Александр Ульяницкий <aulyanitsky@gmail.com>
 
 [trusted]
-users = apache, asux, root
-groups = apache, asux, root
 [merge-tool]
 kdiff3.gui = True
 kdiff3.args = $base $local $other -o $output
@@ -17,6 +15,7 @@ color =
 extdiff =
 convert = 
 qct =
+hgview =
 
 [qct]
 path= /usr/bin/qct
